# fyp23046

./: README.md
aotg-mint/: Anchor.toml
aotg-mint/programs/aotg-mint/: Cargo.toml
aotg-mint/programs/aotg-mint/src/: lib.rs
aotg-mint/tests/: aotg-mint.ts
api/: .graphqlconfig.yml  package.json  pnpm-lock.yaml
api/amplify/: team-provider-info.json
api/amplify/.config/: project-config.json
api/amplify/backend/: backend-config.json
api/amplify/backend/types/: amplify-dependent-resources-ref.d.ts
api/src/: index.ts
api/src/graphql/: index.js  mutations.js  queries.js  schema.json  subscriptions.js
api/src/routes/: ask.ts  bid.ts
api/src/utils/: index.ts
front-end/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
front-end/src/: App.jsx  AppProvider.tsx  index.css  main.tsx
front-end/src/components/common/: MetaComponent.jsx  ModeChanger.jsx  Partners.jsx  Partners2.jsx  ScrollTopBehavier.jsx  Testimonials.jsx
front-end/src/components/create/: Create.jsx  FileUpload.jsx
front-end/src/components/footer/: CompanyLinks.jsx  Footer1.jsx  MarketplaceLinks.jsx  MyAccountLink.jsx
front-end/src/components/headers/: Header1.jsx  Header2.jsx  Header3.jsx  Header4.jsx  Header5.jsx
front-end/src/components/metamask/: MetamarkComponent.tsx  MetamaskInLogin.jsx
front-end/src/components/modals/: BidModal.jsx  (+2 more)
front-end/src/data/: blogs.js  collections.js  contactInfo.js  item.js  resources.js  testimonials.js  wallets.js
front-end/src/utlis/: mobileMenuToggle.js
transfer-hook/: Cargo.toml
transfer-hook/src/: main.rs
(+172 files in other folders)
